Einfügen der Grundaussage des Kapitels Ergebnis und Laufzeit

--- a/literatur.bib
+++ b/literatur.bib
@@ -87,3 +87,15 @@
 	url="https://doi.org/10.1007/978-3-319-22177-9_26"
 }
 
+@article{CARDON198285,
+	title = "Partitioning a graph in O(|A|log2|V|)",
+	journal = "Theoretical Computer Science",
+	volume = "19",
+	number = "1",
+	pages = "85 - 98",
+	year = "1982",
+	issn = "0304-3975",
+	doi = "https://doi.org/10.1016/0304-3975(82)90016-0",
+	url = "http://www.sciencedirect.com/science/article/pii/0304397582900160",
+	author = "A. Cardon and M. Crochemore"
+}
