--- a/sec/struktur_global.tex
+++ b/sec/struktur_global.tex
@@ -77,5 +77,6 @@ Um das folgende Lemma verstehen zu können, wird der Begriff \emph{anisotrope Ko
 		\item $A$ ist ein Baum, der folgende Monotonieeigenschaft erfüllt: Sei $R$ eine Zelle aus $A$ mit minimaler Kardinalität, so ist $A_R$ der gerichtete Baum mit Wurzel $R$; Für jede gerichtete Kante $(X,Y)$ aus $A_R$ gilt dann $|X|\leq |Y|$
 		\item $A$ enthält maximal einen heterogenen Knoten; Wenn ein solcher Knoten existiert, hat dieser minimale Kardinalität in $A$
 	\end{enumerate}
+	\label{lemma:global2}
 \end{Lemma}
 
