Formulieren des Einführungskapitels

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -35,6 +35,7 @@
 \usepackage{mathtools}										% Tools zum Anzeigen von Formeln
 \usepackage[nogroupskip,style=altlist]{glossaries}			% Verwaltung des Glossars
 \usepackage{enumitem}										% Erweiterte Funktionen der enumerate Umgebung
+\usepackage[autostyle=true,german=quotes]{csquotes}			% Wird für den Befehl \enquote benötigt
 
 \captionsetup{farskip=10pt,topadjust=0pt,captionskip=10pt,nearskip=0pt,margin=10pt}
 
