Verfassen des Fazits

--- a/literatur.bib
+++ b/literatur.bib
@@ -99,3 +99,17 @@
 	url = "http://www.sciencedirect.com/science/article/pii/0304397582900160",
 	author = "A. Cardon and M. Crochemore"
 }
+
+@article{Laszlo1980,
+	author = {László Babai and Paul Erdős and Stanley M. Selkow},
+	title = {Random Graph Isomorphism},
+	journal = {SIAM Journal on Computing},
+	volume = {9},
+	number = {3},
+	pages = {628-635},
+	year = {1980},
+	doi = {10.1137/0209047},
+	URL = {https://doi.org/10.1137/0209047},
+	eprint = {https://doi.org/10.1137/0209047}
+	
+}
