--- a/sec/fazit.tex
+++ b/sec/fazit.tex
@@ -1,8 +1,9 @@
 \section{Fazit}
 \label{sec/fazit}
 
-\begin{itemize}
-	\item Zusammenfassung der Ergebnisse
-	\item Bezugnehmen auf die Einleitung und ob die Ziele erreicht wurden
-	\item Abschluss der Arbeit
-\end{itemize}
+In dem Paper von \cite{Arvind2015} sowie in dieser Ausarbeitung wurde die Klasse der CR-Graphen eingeführt und dessen Eigenschaften bezüglich des Color Refinement Algorithmus aufgezeigt.
+Durch die Definition von hinreichenden Bedingungen zur Entscheidung der Klasse wurde ein Verfahren skizziert, welches es ermöglicht, zu entscheiden, ob der Color Refinement Algorithmus auf einen Graphen anwendbar ist und sowohl für Wahr- als auch Falschaussagen die korrekte Antwort liefert. 
+Die in Kapitel \ref{sec/einfuehrung} vorgestellte Frage wurde somit beantwortet und es wurde eine handfeste Definition für alle CR-Graphen aufgestellt.
+
+Wie von \cite{Laszlo1980} gezeigt wurde, erfüllen zufällig generierte Graphen die Eigenschaften von CR-Graphen mit hoher Wahrscheinlichkeit.
+Somit sind die hier vorgestellten Ergebnisse für eine Vielzahl von Graphen anwendbar, für welche damit ein Polynomialzeitalgorithmus für das Graph-Isomorphie-Problem existiert.
