Verfassen des Beweises für die lokale Struktur von CR-Graphen

--- a/literatur.bib
+++ b/literatur.bib
@@ -111,5 +111,26 @@
 	doi = {10.1137/0209047},
 	URL = {https://doi.org/10.1137/0209047},
 	eprint = {https://doi.org/10.1137/0209047}
-	
+}
+
+@article{johnson1975simple,
+	title={Simple separable graphs},
+	author={Johnson, RH},
+	journal={Pacific Journal of Mathematics},
+	volume={56},
+	number={1},
+	pages={143--158},
+	year={1975},
+	publisher={Mathematical Sciences Publishers}
+}
+
+@article{koren1976pairs,
+	title={Pairs of sequences with a unique realization by bipartite graphs},
+	author={Koren, Michael},
+	journal={Journal of Combinatorial Theory, Series B},
+	volume={21},
+	number={3},
+	pages={224--234},
+	year={1976},
+	publisher={Elsevier}
 }
