Einfügen kleinerer Verbesserungen

--- a/sec/ergebnis.tex
+++ b/sec/ergebnis.tex
@@ -15,8 +15,8 @@ Die vorgestellten lokalen und globalen Eigenschaften von CR-Graphen reichen wie 
 	
 	\begin{enumerate}[label=(\alph*)]
 		\item $G$ ist ein CR-Graph
-		\item $G$ erfüllt Bedingungen A-F
-		\item $G$ erfüllt Bedingungen A, B, G und H
+		\item $G$ erfüllt Bedingungen \emph{A-F}
+		\item $G$ erfüllt Bedingungen \emph{A}, \emph{B}, \emph{G} und \emph{H}
 	\end{enumerate}
 \end{Theorem}
 
