--- a/sec/struktur_global.tex
+++ b/sec/struktur_global.tex
@@ -19,7 +19,7 @@ Für das Verständnis der folgenden Eigenschaften von CR-Graphen ist es erforder
 Die Knoten eines Zellgraphen, auch als Zellen bezeichnet, können dabei folgende Eigenschaften aufweisen.
 
 \begin{Definition}
-	Ein Knoten $X\in C(G)$ wird \emph{homogen} genannt, wenn der Graph $G[X]$ vollständig oder leer ist. Anderenfalls wird dieser \emph{heterogen} genannt.
+	Eine Zelle $X\in C(G)$ wird \emph{homogen} genannt, wenn der Graph $G[X]$ vollständig oder leer ist. Anderenfalls wird diese \emph{heterogen} genannt.
 \end{Definition}
 
 \begin{Definition}
@@ -65,17 +65,17 @@ Bei genauerer Betrachtung fällt auf, dass der Zellgraph von CR-Graphen eine bau
 Um das folgende Lemma verstehen zu können, wird der Begriff \emph{anisotrope Komponente} benötigt.
 \begin{Definition}
 	In einem Zellgraphen $C(G)$ bezeichnet eine \emph{anisotrope Komponente} einen Subgraphen, dessen Kanten alle isotrop sind.
-	Wenn ein Knoten keine inzidente, anisotrope Kante besitzt, dann ergibt sich daraus eine anisotrope Komponente mit nur einem Knoten.
+	Wenn eine Zelle keine inzidente, anisotrope Kante besitzt, dann ergibt sich daraus eine anisotrope Komponente mit nur einer Zelle.
 \end{Definition}
 
 \begin{Lemma}
-	Angenommen ein CR-Graph $G$ erfüllt die Bedingungen A-F aus den Lemmata \ref{lemma:lokal} und \ref{lemma:global1}.
+	Angenommen ein CR-Graph $G$ erfüllt die Bedingungen \emph{A-F} aus den Lemmata \ref{lemma:lokal} und \ref{lemma:global1}.
 	Für jede anisotrope Komponente $A$ von $C(G)$ gelten folgende Eigenschaften:
 	
 	\begin{enumerate}[label=(\Alph*)]
 		\setcounter{enumi}{6}
 		\item $A$ ist ein Baum, der folgende Monotonieeigenschaft erfüllt: Sei $R$ eine Zelle aus $A$ mit minimaler Kardinalität, so ist $A_R$ der gerichtete Baum mit Wurzel $R$; Für jede gerichtete Kante $(X,Y)$ aus $A_R$ gilt dann $|X|\leq |Y|$
-		\item $A$ enthält maximal einen heterogenen Knoten; Wenn ein solcher Knoten existiert, hat dieser minimale Kardinalität in $A$
+		\item $A$ enthält maximal eine heterogene Zelle; Wenn eine solche Zelle existiert, hat diese minimale Kardinalität in $A$
 	\end{enumerate}
 	\label{lemma:global2}
 \end{Lemma}
