Formulieren des Beweises für Bedingung C

--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -89,6 +89,7 @@ Es ist somit leicht zu erkennen, dass die durch das Color Refinement erstellte s
 Eine weitere Eigenschaft der Graphfärbungen $C^i$ ist der Erhalt der Färbung über Isomorphismen hinweg.
 \begin{Lemma}
 	Für die Färbungen zweier isomorpher Graphen $G$ und $H$ und ihren Isomorphismus $\phi$ muss gelten: $C^i(u)=C^i(\phi (u))$ für alle $u\in V_G$.
+	\label{lemma:faerbung_isomorphismus}
 \end{Lemma}
 Aus dieser Aussage leitet sich die folgende Gleichung her.
 \begin{equation}
