--- a/sec/struktur_lokal.tex
+++ b/sec/struktur_lokal.tex
@@ -21,6 +21,7 @@ Die Basis dieses Kapitels bildet das folgende Lemma, welches für die Zellen $X$
 	\label{lemma:lokal}
 \end{Lemma}
 
+Wichtig ist an dieser Stelle, dass die in \emph{B} angesprochene Vereinigung von Sternen ausschließlich Sterne enthält, die die gleiche Anzahl, nämlich $t$, von Blättern besitzen.
 Um das Lemma beweisen zu können, werden zunächst folgende Hilfsaussagen benötigt.
 
 \begin{Lemma}
@@ -29,15 +30,15 @@ Um das Lemma beweisen zu können, werden zunächst folgende Hilfsaussagen benöt
 \end{Lemma}
 
 Der Beweis zu dieser Aussage findet sich in \cite{johnson1975simple}.
-Bei genauerer Betrachtung fällt auf, dass die in \emph{(A)} genannten Graphentypen sich in diesem Lemma wieder finden. Tabelle \ref{tab:mapping_regulaer} gibt dazu eine Übersicht über die Abbildung der Aussagen.
+Bei genauerer Betrachtung fällt auf, dass die in \emph{A} genannten Graphentypen sich in diesem Lemma wieder finden. Tabelle \ref{tab:mapping_regulaer} gibt dazu eine Übersicht über die Abbildung der Aussagen.
 
 \begin{table}
 	\centering
-	\caption{Abbildung der Aussagen aus Lemma \ref{lemma:lokal} \emph{(A)} und Lemma \ref{lemma:lokal_regulaer}}
+	\caption{Abbildung der Aussagen aus Lemma \ref{lemma:lokal} \emph{A} und Lemma \ref{lemma:lokal_regulaer}}
 	\label{tab:mapping_regulaer}
 	\begin{tabular}{|l|l|}
 		\hline 
-		Graphentyp aus Lemma \ref{lemma:lokal} \emph{(A)} & Definition aus Lemma \ref{lemma:lokal_regulaer} \\ 
+		Graphentyp aus Lemma \ref{lemma:lokal} \emph{A} & Definition aus Lemma \ref{lemma:lokal_regulaer} \\ 
 		\hline 
 		Leerer Graph & $d=0$ \\ 
 		\hline 
@@ -63,11 +64,11 @@ Auch für bipartite Graphen können die Aussagen von Lemma \ref{lemma:lokal} (B)
 
 \begin{table}
 	\centering
-	\caption{Abbildung der Aussagen aus Lemma \ref{lemma:lokal} (B) und Lemma \ref{lemma:lokal_bipartit}}
+	\caption{Abbildung der Aussagen aus Lemma \ref{lemma:lokal} \emph{B} und Lemma \ref{lemma:lokal_bipartit}}
 	\label{tab:mapping_bipartit}
 	\begin{tabular}{|l|l|}
 		\hline 
-		Graphentyp aus Lemma \ref{lemma:lokal} (B) & Definition aus Lemma \ref{lemma:lokal_bipartit} \\ 
+		Graphentyp aus Lemma \ref{lemma:lokal} \emph{B} & Definition aus Lemma \ref{lemma:lokal_bipartit} \\ 
 		\hline 
 		Leerer Graph & $d=c=0$ \\ 
 		\hline 
